--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,7 +44,6 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="{% url 'index' %}">Home</a></li>
-       
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -52,12 +51,9 @@
     </div>
   </header><!-- End Header -->
 
-  <main>
-    
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <Section >
       <div class="container" data-aos="fade-up">
-    
         <div class="section-title">
           <h2>Contact</h2>
           <p>Don't hesitate to reach out to us.</p>
@@ -89,10 +85,10 @@
     
           </div>
     
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form method="post" action=""  >
+          <div class="col-lg-5 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form method="post" action="/contact" >
               {% csrf_token %}
-        
+                
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -116,7 +112,7 @@
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
           
-              <div class="text-center"><button type="submit" class="btn btn-primary">Send Message</button></div>
+              <div class="text-center mt-4"><button type="submit" class="btn btn-primary">Send Message</button></div>
             </form>
           </div>
           
@@ -126,7 +122,6 @@
     </section><!-- End Contact Section -->
     
 
-  </main><!-- End #main -->
 
    <!-- ======= Footer ======= -->
    <footer id="footer">
