--- a/templates/contact.html
+++ b/templates/contact.html
@@ -34,25 +34,24 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top header-inner-pages">
+  <header id="header" class="fixed-top header-inner-pages ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href=" {% url 'index' %}">FASTWEBTECH</a></h1>
+      <h2 class="logo me-auto "> <a href=" {% url 'index' %}">FASTWEBTECH</a></h2>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="{% url 'index' %}">Home</a></li>
+          <li><a class="nav-link scrollto active " href="{% url 'index' %}">Home</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
     </div>
   </header><!-- End Header -->
 
     <!-- ======= Contact Section ======= -->
-    <Section >
+    <Section class="mt-3">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Contact</h2>
@@ -162,7 +161,7 @@
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.instagram.com/fastwebtech_solution_company/" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
